tests/must_not_compile/append1.stderr
error[E0271]: type mismatch resolving `<A as type_inequality::Compare<A>>::EQUAL == false`
  --> tests/must_not_compile/append1.rs:15:22
   |
15 |     let _: Coproduct<C> = coproduct::inject(A);
   |                      ^ expected `true`, found `false`
   |
   = note: expected constant `true`
              found constant `false`
   = note: required for `A` to implement `NotEqual<A>`
   = note: required for `coproduct::Union<A, EmptyUnion>` to implement `merge::DoesNotContain<A>`
   = note: required for `coproduct::Union<A, EmptyUnion>` to implement `Append<A, coproduct::merge::NotPresent>`
